update on integration

--- a/reflex-stone.cabal
+++ b/reflex-stone.cabal
@@ -16,7 +16,7 @@ executable reflex-stone
     , reflex
     , reflex-dom
     , text
-    , baby-l4
+    , baby-l4-core
     , reflex-dom-ace
 
   default-extensions:
