--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,12 +3,14 @@ on:
   push:
   pull_request:
 jobs:
-  neuron:
+  build-page:
     runs-on: ubuntu-latest
     env:
       MAINLINE: refs/heads/master
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: cachix/install-nix-action@v12
         with:
           nix_path: nixpkgs=channel:nixos-unstable
