fix lsp issue and format main.hs
Co-authored-by: Andreas Källberg <anka-213@users.noreply.github.com>

--- a/reflex-stone.cabal
+++ b/reflex-stone.cabal
@@ -12,8 +12,7 @@ executable reflex-stone
   hs-source-dirs:     src
   main-is:            Main.hs
   other-modules:
-      Main
-    , Editor
+      Editor
     , Helpers
     , StringUtils
     , Style
