--- a/reflex-stone.cabal
+++ b/reflex-stone.cabal
@@ -12,10 +12,14 @@ executable reflex-stone
   hs-source-dirs:     src
   main-is:            Main.hs
   other-modules:
-      Editor
-    , Helpers
-    , StringUtils
-    , Style
+      Widgets.Common.Editor
+    , Widgets.Common.TabbedWindow
+    , Widgets.Common
+    , Widgets.Page.TwoWindow
+    , Widgets.Page.TwoWindow.OutputWindow
+    , Widgets.Page.TwoWindow.Style
+    , Utils.Style
+    , Utils.String
   build-depends:
       base
     , reflex
