--- a/reflex-stone.cabal
+++ b/reflex-stone.cabal
@@ -18,6 +18,7 @@ executable reflex-stone
     , Widgets.Page.TwoWindow
     , Widgets.Page.TwoWindow.OutputWindow
     , Widgets.Page.TwoWindow.OutputWindow.ASTTab
+    , Widgets.Page.TwoWindow.OutputWindow.JSEcho
     , Widgets.Page.TwoWindow.Style
     , Utils.Style
     , Utils.String
