--- a/reflex-stone.cabal
+++ b/reflex-stone.cabal
@@ -32,8 +32,6 @@ executable reflex-stone
     , jsaddle
     , jsaddle-dom
     , mtl
-    , ghcjs-base
-    , ghcjs-dom-jsffi
 
   default-extensions:
     DataKinds
@@ -48,6 +46,9 @@ executable reflex-stone
   if impl(ghcjs -any)
     ghc-options: -dedupe
     cpp-options: -DGHCJS_BROWSER
+    build-depends:
+        ghcjs-dom-jsffi
+      , ghcjs-base
 
   default-language:   Haskell2010
 
