implement ast tabs

--- a/reflex-stone.cabal
+++ b/reflex-stone.cabal
@@ -40,6 +40,8 @@ executable reflex-stone
     OverloadedStrings
     ScopedTypeVariables
     RecursiveDo
+    CPP
+    MonoLocalBinds
 
   ghc-options:        -Wall -threaded
 
