--- a/frontend/reflex-stone.cabal
+++ b/frontend/reflex-stone.cabal
@@ -6,7 +6,7 @@ license-file:       LICENSE
 author:             Sridhar Ratnakumar
 maintainer:         srid@srid.ca
 build-type:         Simple
-extra-source-files: README.md
+-- extra-source-files: README.md
 
 executable reflex-stone
   hs-source-dirs:     src
