fix lsp issue and format main.hs
Co-authored-by: Andreas Källberg <anka-213@users.noreply.github.com>

--- a/frontend/reflex-stone.cabal
+++ b/frontend/reflex-stone.cabal
@@ -12,7 +12,8 @@ executable reflex-stone
   hs-source-dirs:     src
   main-is:            Main.hs
   other-modules:
-      Widgets.Common.Editor
+      InnerMain
+    , Widgets.Common.Editor
     , Widgets.Common.TabbedWindow
     , Widgets.Common
     , Widgets.Page.TwoWindow
